--- a/style.css
+++ b/style.css
@@ -60,16 +60,16 @@
 	}
 
 	.content_type_clase_corefo_demo #actividad .content .header .title h3 {
-		font-family: 'Averia Serif Libre', Georgia, serif;
-		font-size: 6.2rem;
-		font-weight: normal;
-		color: #0095DA;
-		display: block;
-		border-left: 18px solid #FFCA04;
-		margin-left: -97px;
-		padding: 50px 106px 0px 72px;
-		margin-top: -30px;
-		margin-bottom: 50px;
+		 font-family: 'Averia Serif Libre', Georgia, serif;
+         font-size: 4.2rem;
+         font-weight: normal;
+         color: #783cbd;
+         display: block;
+         border-left: 18px solid #00c4b3;
+         margin-left: -97px;
+         padding: 60px 106px 0px 72px;
+         margin-top: -30px;
+    margin-bottom: 50px;
 	}
 	.content_type_clase_corefo_demo #actividad .content .header .title h3 span {
 		display: block;
