--- a/style.css
+++ b/style.css
@@ -594,7 +594,7 @@
     position: absolute;
     text-align: right;
     color: #ffffff;
-    background: #783cbd;
+    background: #00c4b3;
     margin-left: -42px;
     margin-right: 5px;
     border-radius: 100%;
