--- a/style.css
+++ b/style.css
@@ -661,16 +661,15 @@
     color: #783cbd;
     background: #ffffff;
     float: left;
-    font-size: 28px;
+    font-size: 27px;
     border-radius: 15px;
     height: auto;
-    line-height: 58px;
     margin: 27px 150px 33px 34px;
     overflow: hidden;
     z-index: 1;
     display: block;
     display: -webkit-box;
-    padding: 0px 10px;
+    padding: 15px;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
