--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
 	}
 
 	.content_type_clase_corefo_demo #actividad .content .header .title h3 {
-		 font-family: 'Averia Serif Libre', Georgia, serif;
+		 font-family: "BuloRounded-Bold";
          font-size: 4.2rem;
          font-weight: normal;
          color: #783cbd;
