--- a/style.css
+++ b/style.css
@@ -631,7 +631,7 @@
 /*Actividades*/
 
 #actividad .content .header .title h3 {
-    font-family: 'Averia Serif Libre', Georgia, serif;
+    font-family: "BuloRounded-Bold";
     font-size: 4.2rem;
     font-weight: normal;
     color: #783cbd;
