--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+/*añadidas nuevas*/
+
+.libro-right .icontool-24{
+   display: none;
+}
+
+.single-pagination:before {
+    content: " ";
+    background-image: url(/useruploads/r/a/93603420/activity_other_imported/logo_blanco.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 58px;
+    width: 46px;
+    position: absolute;
+    left: 25%;
+    top: 25%;
+}
+
+.js-slide-wrapper > .header .single-pagination{
+  color: transparent;
+}
+
 /* General */
 
 @import url(https://fonts.googleapis.com/css?family=Averia+Serif+Libre:400,400italic);
@@ -77,7 +99,7 @@
 
 	.content_type_clase_corefo_demo #actividad .content .header .title h3 {
 		 font-family: "BuloRounded-Bold";
-         font-size: 4.2rem;
+         font-size: 3.2rem;
          font-weight: normal;
          color: #783cbd;
          display: block;
